force-app/main/default/objects/Cloudrop__Email_Account_Details__c/Cloudrop__Email_Account_Details__c.object-meta.xml
<CustomObject>
    <label>Email Account</label>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>