force-app/main/default/objects/Cloudrop__Email_Account_Details__c/fields/Cloudrop__Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Private</label>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>