force-app/main/default/objects/Cloudrop__Email_Account_Details__c/fields/Cloudrop__Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Folder_Name__c</fullName>
    <defaultValue>&apos;Inbox&apos;</defaultValue>
    <label>Folder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>