force-app/main/default/objects/Cloudrop__Email_Account_Details__c/fields/Cloudrop__Retype_Password__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Retype_Password__c</fullName>
    <label>Retype Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>