force-app/main/default/objects/Cloudrop__Email_Account_Details__c/fields/Cloudrop__Server_Details__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Server_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Server Detail</label>
    <referenceTo>Cloudrop__Server_Details__c</referenceTo>
    <relationshipLabel>Email Account</relationshipLabel>
    <relationshipName>Email_Account_Details</relationshipName>
    <type>Lookup</type>
</CustomField>