force-app/main/default/objects/Cloudrop__Email_Account_Details__c/fields/Cloudrop__User_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__User_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User Id</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>