force-app/main/default/objects/Cloudrop__Email_Account_Details__c/listViews/Cloudrop__All.listView-meta.xml
<ListView>
    <fullName>Cloudrop__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>